Added control example config and added over discharge config

--- a/config.yaml.dist
+++ b/config.yaml.dist
@@ -40,3 +40,11 @@ victoria-metrics:
   # Basic HTTP authentication
   username:
   password:
+
+control:
+  run: true # Run control loop?
+  # How often to run checks in seconds. 
+  # I'm not sure how well the batteries like being set to discharge and stop every 5s so I think you do not want to change this below 30s.
+  loop-interval: 30
+  minimum-solar-over-production: 10 # Minimum percentage solar over production. This is the percentage of unused power.
+  over-discharge-percentage: 3 # What percentage to over discharge. Handy for spikes in energy usage
